--- a/tools/Smartstore.IconGenerator/index.html
+++ b/tools/Smartstore.IconGenerator/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>IconGenerator</title>
-		<meta charset="UTF-8">
-		<link rel="shortcut icon" href="favicon.ico" />
-		<link type="text/css" href="styles.css" rel="stylesheet" />
-	</head>
+<head>
+	<title>Smartstore SVG Icon Subset Generator</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover, shrink-to-fit=no">
+	<link rel="shortcut icon" href="favicon.ico" />
+	<link type="text/css" href="styles.css" rel="stylesheet" />
+</head>
 	<body>
 		<div id="controls">
 			<input type="text" name="filter" placeholder="Filter" />
