--- a/tools/Smartstore.IconGenerator/index.html
+++ b/tools/Smartstore.IconGenerator/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, viewport-fit=cover, shrink-to-fit=no">
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link type="text/css" href="styles.css" rel="stylesheet" />
+	<script src="icon-generator.js"></script>
 	<script src="ui.js"></script>
 </head>
 	<body>
@@ -50,8 +51,6 @@
 		</div>
 		
 		<script content-type="text/javascript" type="module">
-			import { IconGenerator } from "./icon-generator.js"
-
 			const iconGenerator = new IconGenerator();
 
             const remoteInput = document.getElementById('file_remote');
