--- a/tools/Smartstore.IconGenerator/index.html
+++ b/tools/Smartstore.IconGenerator/index.html
@@ -34,16 +34,16 @@
 					<input type="file" class="file-input" id="file_remote" accept=".svg" />
 				</div>
 				<div class="file">
-					<label  for="file_remote">Local</label>
+					<label  for="file_local">Local</label>
 					<input type="file" class="file-input" id="file_local" accept=".svg" />
 				</div>
 				<div class="file">
-					<label for="file_remote">Subset</label>
+					<label for="file_subset">Subset</label>
 					<input type="file" class="file-input" id="file_subset" accept=".svg" />
 				</div>
 			</div>
 			<div class="section buttons">
-                <button type="button" class="btn" id="read_files">
+                <button type="button" class="btn" id="read_files" disabled>
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="ui-icon"><use xlink:href="#ig_ui_grid" /></svg>
 					Read files
                 </button>
@@ -77,30 +77,5 @@
 				</div>
             </div>
 		</div>
-		
-		<script content-type="text/javascript">
-			const iconGenerator = new IconGenerator();
-
-			// TODO: (mw) Script initialization should be done on DOMContentLoaded event. Possibly too early here for DOM access.
-			// TODO: (mw) Very bad practice to declare variables here and clutter the global namespace with them. Programming requires structure and ISOLATION! Be creative and try to implement more sophisticated code.
-
-            // File input elements.
-            const remoteInput = document.getElementById('file_remote');
-            const localInput = document.getElementById('file_local');
-            const subsetInput = document.getElementById('file_subset');
-
-            // Filter input elements.
-            const textFilter = document.getElementById('filter_text');
-            const newFilter = document.getElementById('filter_new');
-            const usedFilter = document.getElementById('filter_used');
-
-            // Icon container and buttons.
-            const iconContainer = document.getElementById('iconContainer');
-            const readFilesButton = document.getElementById('read_files');
-			const exportButton = document.getElementById('export_subset');
-
-			tryRestoreFiles();
-			initUI();
-		</script>
 	</body>
 </html>
